# parseme

./: CHANGELOG.md  Cargo.toml  README.md
examples/: identifier.rs  token.rs
parseme-xid/: Cargo.toml
parseme-xid/src/: lib.rs
src/: error.rs  lib.rs  source.rs  source_no_alloc.rs
src/iter/: advance.rs  mod.rs  next_until.rs  next_while.rs  peek.rs
src/parser/: group.rs  iter.rs  mod.rs  stream.rs
src/stream/: mod.rs
