[package]
name = "parseme"
version = "0.1.0-alpha"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["xid"]
xid = ["parseme-xid"]

[workspace]
[dependencies]
parseme-xid = { version = "0.1.0-alpha", path = "parseme-xid", optional = true }