[package]
name = "parseme-xid"
description = "Basic Unicode XID support for Parseme."
version = "0.3.0-alpha"
license = "MIT"
homepage = "https://github.com/pzipper/parseme"
repository = "https://github.com/pzipper/parseme"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unicode-xid = "0.2.4"